<resources>
    <string name="app_name" translatable="false">TEFModLoader</string>



    <string name="github_text">开源仓库</string>
    <string name="licence">开源许可证</string>
    <string name="QQ">QQ交流群</string>



    <string name="game">配置并启动游戏</string>
    <string name="game_text">快捷地启动游戏工具箱</string>
    <string name="settings_text">更多个性化设置</string>
    <string name="logs_text">了解近期更新内容</string>
    <string name="techsupport">技术支持</string>
    <string name="techsupport_text">你的支持便是我们坚持的理由</string>


    <string name="FreeformWindowOrientation_landscape" translatable="false" />
    <string name="FreeformWindowOrientation_portrait" translatable="false" />
    <string name="FreeformWindowSize_maximize" translatable="false" />
    <string name="FreeformWindowSize_phone" translatable="false" />
    <string name="FreeformWindowSize_tablet" translatable="false" />


    <string name="Agreement_title">请同意以下协议</string>
    <string name="Agreement_ok">我已了解并同意</string>
    <string name="Agreement_no">拒绝并退出</string>

    <!--
     主页
     -->
    <string name="home">主页</string>
    <string name="greetings_1">ヽ(。ゝω・)ノ☆;:*早上好*:;☆</string>
    <string name="greetings_2">ヽ(´･∀･｀)ﾉ〔*…..**★中午好★**…..*〕</string>
    <string name="greetings_3">(=^･ω･)ﾉ 晚上好♪</string>
    <string name="greetings_4">○Ｏo。.（T￢T)/~~~晚安</string>
    <string name="greetings_5">下午好！(*´∀｀)ﾉ</string>
    <string name="feedback">反馈</string>

    <!-- 更新日志 -->
    <string name="dialog_update_logs_title">更新日志</string>
    <string name="logs">更新日志|x･`)(一定会按时更新的)</string>
    <string name="logs_title_100" translatable="false">1.0.0</string>
    <string name="logs_text_100">1.可使用EFMod作为游戏扩展 \n2.可导入存档/配置 \n3.EFMod基本支持 \n4.调试工具 \n5.额外的游戏菜单</string>

    <string name="logs_title_120" translatable="false">1.2.0</string>
    <string name="logs_text_120">1.开放自定义内核 \n2.可导出数据 \n3.更强大的内存管理 \n4.英语翻译 \n5.更换Mod文件格式以及新文件系统 \n6.不再携带汉化版本，而是纯原版 \n7.修复文件无法选择bug \n8.更新一言 \n9.优化Mod安装、读取、启用速度 \n10.优化游戏启动速度 \n11.优化内核 \n12.更多API支持 \n13.更换DodyHook，移除shadowhook \n14.移除不稳定的调试工具 \n15.支持独立Mod</string>

    <string name="logs_title_121" translatable="false">1.2.1</string>
    <string name="logs_text_121">1.更新文件系统 \n2.添加解压进度 \n3.优化Mod以及Loader读取速度 \n4.防呆/手残安装错误文件</string>

    <string name="logs_title_150" translatable="false">1.5.0</string>
    <string name="logs_text_150">1.重写软件架构 \n2.重写底层 \n3.脱离内置游戏 \n4.使用标准化EFModLoader \n5.支持两种工作模式：共享 and 外部 \n6.优化UI表现 \n7.更强大的错误处理 \n8.减小占用 \n9.软件性能优化 \n10.增加日志系统 \n11.移除游戏面板 \n12.增加代码复用 \n注：部分功能可能无法使用或没有预期效果，请谅解QAQ</string>

    <string name="logs_title_155" translatable="false">1.5.5 Stable</string>
    <string name="logs_text_155">1.支持共享内核 \n2.内核支持Java API \n3.完善之前除游戏面板外的所有功能 \n4.更新帮助文档 \n5.Mod私有目录的双向更新 \n6.更好的权限申请 \n7.更强大的内核 \n8.自定义内核 \n9.性能优化 \n10.繁体中文 \n11.更新Mod标准，支持多语言 \n注：此版本为1.5.5 Stable，长期稳定，更新慢，调试/测试可选择周构建\n注：此版本为1.5.5 Stable，长期稳定，更新慢，调试/测试可选择周构建\n注：此版本为1.5.5 Stable，长期稳定，更新慢，调试/测试可选择周构建\n注：此版本为1.5.5 Stable，长期稳定，更新慢，调试/测试可选择周构建\n注：此版本为1.5.5 Stable，长期稳定，更新慢，调试/测试可选择周构建\n注：此版本为1.5.5 Stable，长期稳定，更新慢，调试/测试可选择周构建\n注：此版本为1.5.5 Stable，长期稳定，更新慢，调试/测试可选择周构建\n注：此版本为1.5.5 Stable，长期稳定，更新慢，调试/测试可选择周构建\n注：此版本为1.5.5 Stable，长期稳定，更新慢，调试/测试可选择周构建</string>

    <string name="Clear_cache_title">是否清除缓存？</string>
    <string name="Clear_cache_message">此工具会缓存各种文件，如：您安装的Mod，存档，人物等</string>
    <string name="Clear_cache">清除缓存</string>
    <string name="NOClear_cache">直接退出</string>

    <!-- 关于 -->
    <string name="about">关于</string>
    <string name="app_text">致力打造最好的工具</string>

    <string name="developer">开发者</string>
    <string name="developer_text">了解开发</string>
    <string name="developer_Easteregg_0">|´ω｀)ﾉ 你好</string>
    <string name="developer_Easteregg_1">不要欺负我QAQ</string>
    <string name="developer_Easteregg_1_1">别戳辣QAQ</string>
    <string name="developer_Easteregg_2" translatable="false">(*´ー)ﾉ(ノд`)</string>
    <string name="developer_Easteregg_2_1">再戳要肆辣qwq</string>
    <string name="developer_Easteregg_3" translatable="false">(っ´ω`)ﾉ(╥ω╥)</string>
    <string name="developer_Easteregg_3_1">再戳真的要肆辣(╥ω╥)</string>
    <string name="developer_Easteregg_4" translatable="false">(; ω ; )ヾ(´∀`* )</string>
    <string name="developer_Easteregg_4_1">我肆了程序会崩溃滴(; ω ; )</string>
    <string name="developer_Easteregg_5">丸辣！ヾ(*ﾟДﾟ)人(*ﾟдﾟ)ﾉ</string>
    <string name="developer_Easteregg_5_1">你把开发者戳肆了(ο´･д･)??</string>
    <string name="developer_Easteregg_5_2">:(´ཀ`」 ∠):我肆了</string>

    <string name="Open_source_license">开源许可证</string>
    <string name="Open_source_license_text">查看使用的开源项目以及使用的许可证说明</string>

    <string name="Open_source_repository">开源仓库</string>
    <string name="Open_source_repository_text">查看我们的开源仓库</string>

    <string name="Special_Thanks">特别鸣谢</string>
    <string name="Special_Thanks_text">查看为项目做出贡献的人</string>

    <string name="Future_plans">未来计划</string>
    <string name="Future_plans_text">查看未来可能实现的目标</string>

    <string name="help">帮助</string>

    <string name="settings">设置</string>
    <string name="settings_1">常规</string>

    <string name="settings_theme">主题</string>
    <string name="settings_theme_1">跟随系统</string>
    <string name="settings_theme_2">亮色主题</string>
    <string name="settings_theme_3">暗色主题</string>

    <string name="settings_language">语言</string>
    <string name="settings_language_1">跟随系统</string>
    <string name="settings_language_2" translatable="false">简体中文</string>
    <string name="settings_language_3" translatable="false">繁體中文</string>
    <string name="settings_language_4" translatable="false">Русский язык</string>
    <string name="settings_language_5" translatable="false">English</string>

    <string name="settings_language_dialog_close">点错了QAQ</string>

    <string name="RestartDialog_title">设置不会立即生效，是否现在重启？</string>
    <string name="RestartApp">重启</string>

    <string name="Directly_replace_the_file">直接替换文件</string>
    <string name="Directly_replace_the_file_subtitle">文件存在时直接替换文件</string>

    <string name="Automatically_clear_cache">自动清除缓存</string>
    <string name="Automatically_clear_cache_subTitle">每次退出都会自动清除缓存</string>

    <string name="clear_dialogs">弹出清除弹窗</string>
    <string name="clear_dialogs_subtitle">每次退出都询问是否清除缓存</string>

    <string name="yiyan_text">👆(*≧▽≦)ﾉｼ))好听的一言</string>
    <string name="close">关闭</string>



    <!--
        工具箱
    -->
    <string name="toolbox">工具箱</string>
    <string name="Import_Archive">导入存档</string>
    <string name="Import_Configuration">导入配置</string>
    <string name="file_management">文件管理</string>
    <string name="file_management_1">内置编辑器打开</string>
    <string name="file_management_2">其他方式打开</string>
    <string name="file_management_3">移动到回收站</string>
    <string name="file_management_4">永久删除</string>

    <string name="CoveringFiles_dialog_title">文件已存在</string>
    <string name="CoveringFiles_dialog_message">文件已存在于目标位置。你想替换它吗？</string>

    <string name="Delete_file_1">删除成功</string>
    <string name="Delete_file_2">删除失败</string>
    <string name="Delete_file_3">文件不存在</string>

    <!-- 游戏面板 -->
    <string name="GamePanel">游戏面板</string>
    <string name="GamePanel_Text">额外游戏功能(＞◡＜)</string>
    <string name="GamePanel_1">悬浮窗</string>
    <string name="GamePanel_2">调试工具</string>
    <string name="GamePanel_Start">Terraria启动！(👍ᐛ )</string>


    <string name="terminal">终端</string>
    <string name="terminal_Command">终端命令</string>
    <string name="terminal_runCommand">执行命令(¬ -̮ ¬)</string>
    <string name="terminal_Command_Text">输入 help 或者 help -command 可获取帮助(★≧▽^))★☆</string>
    <string name="Unknown_command">未知命令(｡・ω・｡)?: </string>


    <!--
        管理
    -->
    <string name="manage">管理</string>
    <string name="install_efmod">安装EFMod</string>
    <string name="install_res">安装资源包</string>

    <string name="efmod_manager">EFMod管理</string>
    <string name="res_manager">资源包管理</string>
    <string name="author_text">作者:</string>
    <string name="build_text">版本:</string>
    <string name="modIntroduce_text">介绍:</string>
    <string name="ModRuntime">运行时: </string>
    <string name="deleteMod">删除此Mod？</string>
    <string name="removeEFMod">已移除，请退出页面刷新</string>
    <string name="determine">确定</string>
    <string name="Jump_to_open_source_URL">跳转开源链接</string>
    <string name="Development_Settings">实验性选项</string>
    <string name="Kernel_management">内核管理</string>
    <string name="Install_kernel">安装内核</string>


    <string name="onBackPressedDispatcher_exit">再按一次退出</string>

    <string name="Running_logs">运行日志</string>
    <string name="Online_Video">在线视频</string>
    <string name="Game_status">运行信息</string>
    <string name="dump_save">导出存档</string>
    <string name="dump_all">导出所有数据</string>

    <string name="file">文件</string>
    <string name="file_text">已存在，是否要替换？</string>
    <string name="FileManagementPath">文件管理目录</string>
    <string name="setFileManagementPath">设置文件管理路径</string>
    <string name="inputFileManagementPath">请输入文件管理的新路径</string>
    <string name="FileImportPath">导入文件路径</string>
    <string name="setFileImportPath">设置文件导入的目录</string>
    <string name="inputFileImportPath">请输入导入数据时导入到的路径</string>
    <string name="FileExportPath">导出数据包名</string>
    <string name="setFileExportPath">设置导出数据时的指定应用</string>
    <string name="inputFileExportPath">请输入新的包名</string>
    <string name="cancel">取消</string>

    <string name="loadingMod">正在解压 EFMod &amp; EFModLoader…</string>
    <string name="runtime_1">外部内核</string>
    <string name="runtime_2">共享内核</string>
    <string name="runtime">工作模式</string>
    <string name="TargetPackageName">目标包名</string>
    <string name="Please_enter_the_package_name">请输入包名</string>
    <string name="Set_target_package_name">设置目标包名</string>
    <string name="important">重要</string>

    <string name="settings_architecture">Mod/Loader运行架构</string>

    <string name="Installation_successful">安装成功！</string>
    <string name="Installation_failed">安装失败！</string>

</resources>