<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_1">
        <silkways.terraria.efmodloader.ui.preference.ThemePreference
            android:key="theme"
            android:icon="@drawable/twotone_color_lens_24"
            android:title="@string/settings_theme"
            android:summary="@string/Directly_replace_the_file_subtitle" />
        <SwitchPreference
            android:key="replace_file"
            android:icon="@drawable/twotone_auto_awesome_motion_24"
            android:title="@string/Directly_replace_the_file"
            android:summary="@string/Directly_replace_the_file_subtitle" />
        <SwitchPreference
            android:key="auto_clear"
            android:icon="@drawable/twotone_cleaning_services_24"
            android:title="@string/Automatically_clear_cache"
            android:summary="@string/Automatically_clear_cache_subTitle" />
        <SwitchPreference
            android:key="clear_dialog"
            android:icon="@drawable/twotone_clear_all_24"
            android:title="@string/clear_dialogs"
            android:summary="@string/clear_dialogs_subtitle" />
    </PreferenceCategory>
</PreferenceScreen>