<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/terminal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/terminal"
            app:icon="@drawable/twotone_terminal_24"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_Panel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game"
            app:icon="@drawable/twotone_videogame_asset_24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Import_Archive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/Import_Archive"
            app:icon="@drawable/twotone_drive_file_move_24"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Import_Configuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Import_Configuration"
            app:icon="@drawable/twotone_drive_file_move_24"/>
    </LinearLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView3"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="?attr/colorSurfaceContainerHigh"
        app:cardElevation="1dp"
        app:contentPadding="16dp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_management"
                android:textSize="16sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/file_List"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dump_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/dump_save"
            app:icon="@drawable/twotone_drive_file_move_rtl_24"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dump_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dump_all"
            app:icon="@drawable/twotone_drive_file_move_rtl_24"/>
    </LinearLayout>

</LinearLayout>
