<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/install_efmod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/install_efmod"
            app:icon="@drawable/twotone_install_mobile_24"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/efmod_manager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/efmod_manager"
            app:icon="@drawable/twotone_token_24" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="?attr/colorSurfaceContainerHigh"
        app:cardElevation="1dp"
        app:strokeWidth="0dp"
        app:contentPadding="13dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Development_Settings"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Install_kernel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Install_kernel"
                app:icon="@drawable/twotone_install_mobile_24" />

            <Button
                android:id="@+id/Kernel_management"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Kernel_management"
                app:icon="@drawable/twotone_token_24" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
