<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/install_efmod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/install_efmod"
        app:icon="@drawable/twotone_install_mobile_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.45"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/install_res"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/install_res"
        app:icon="@drawable/twotone_install_mobile_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.45"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/efmod_manager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/efmod_manager"
        app:icon="@drawable/twotone_token_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/install_efmod"
        app:layout_constraintWidth_percent="0.45"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/res_manager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/res_manager"
        app:icon="@drawable/twotone_token_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/install_res"
        app:layout_constraintWidth_percent="0.45"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:strokeColor="#00000000"
        app:strokeWidth="0dp"
        app:layout_constraintTop_toBottomOf="@+id/res_manager"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Development_Settings"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="MissingConstraints" />


            <Button
                android:id="@+id/Install_kernel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Install_kernel"
                app:icon="@drawable/twotone_install_mobile_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <Button
                android:id="@+id/Kernel_management"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Kernel_management"
                app:icon="@drawable/twotone_token_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Install_kernel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
